fondamentalmente eliminati dei refusi da index.html e test/*, cominciata revisione sezione .our-offer di test/index.html

--- a/index.html
+++ b/index.html
@@ -12,41 +12,41 @@
 <body>
     <!-- Row 1 -->
     <div class="debug container">
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
     </div>
     <!-- /Row 1 -->
     <!-- Row 2 -->
     <div class="debug container">
-        <div class="col-12"><span class="debug">12 col</span class="debug"></div>
+        <div class="col-12"><span class="debug">12 col</span></div>
     </div>
     <!-- /Row 2 -->
     <!-- Row 3 -->
     <div class="debug container">
         <div class="col-8">
-            <span class="debug">8 col</span class="debug">
+            <span class="debug">8 col</span>
         </div>
-        <div class="col-2"><span class="debug">2 col</span class="debug"></div>
-        <div class="col-2"><span class="debug">2 col</span class="debug"></div>
+        <div class="col-2"><span class="debug">2 col</span></div>
+        <div class="col-2"><span class="debug">2 col</span></div>
     </div>
     <!-- /Row 3 -->
     <!-- Row 4 -->
     <div class="debug container">
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
-        <div class="col-2"><span class="debug">2 col</span class="debug"></div>
-        <div class="col-2"><span class="debug">2 col</span class="debug"></div>
-        <div class="col-6"><span class="debug">6 col</span class="debug"></div>
-        <div class="col-1"><span class="debug">1 col</span class="debug"></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
+        <div class="col-2"><span class="debug">2 col</span></div>
+        <div class="col-2"><span class="debug">2 col</span></div>
+        <div class="col-6"><span class="debug">6 col</span></div>
+        <div class="col-1"><span class="debug">1 col</span></div>
     </div>
     <!-- /Row 4 -->
     <!-- Row 5 -->
@@ -54,17 +54,17 @@
         <div class="col-6">
             <!-- Sub-row 1 -->
             <div class="debug container">
-                <div class="col-2"><span class="debug">Nested 2 col</span class="debug"></div>
-                <div class="col-2"><span class="debug">Nested 2 col</span class="debug"></div>
-                <div class="col-8"><span class="debug">Nested 8 col</span class="debug"></div>
+                <div class="col-2"><span class="debug">Nested 2 col</span></div>
+                <div class="col-2"><span class="debug">Nested 2 col</span></div>
+                <div class="col-8"><span class="debug">Nested 8 col</span></div>
             </div>
             <!-- /Sub-row 1 -->
         </div>
         <!-- Sub-row 2 -->
         <div class="col-6">
             <div class="debug container">
-                <div class="col-6"><span class="debug">Nested 6 col</span class="debug"></div>
-                <div class="col-6"><span class="debug">Nested 6 col</span class="debug"></div>
+                <div class="col-6"><span class="debug">Nested 6 col</span></div>
+                <div class="col-6"><span class="debug">Nested 6 col</span></div>
             </div>
         </div>
         <!-- Sub-row 2 -->
