--- a/test/index.html
+++ b/test/index.html
@@ -22,14 +22,14 @@
         <!-- top-nav -->
         <nav>
             <div class="container">
-                <div class="col-2 col-offset-1">
+                <div class="col-4 col-offset-1">
                     <ul>
                         <li><a href=""> <i class="fas fa-globe-europe"></i></a> </li>
                         <li class="divided"><a href="">English</a></li>
                         <li class="dropdown"><a href="">Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-offset-2">
+                <div class="col-4 col-offset-2">
                     <ul>
                         <li class="search"><a href=""><i class="fas fa-search"></i></a></li>
                         <li class="btn log-btn"><a href="">Log In</a></li>
@@ -71,18 +71,15 @@
                         <p class="caption">Get started with FREE tools, and upgrade as you grow.</p>
                     </div>
                 </div>
-
             </div>
         </section>
-
-
     </header>
     <!-- END HEADER -->
 
     <!-- MAIN -->
     <main>
         <section class="our-offer">
-            <div class="wrapper">
+            <div class="container">
                 <!-- Slogan -->
                 <div class="slogan">
                     <img src="img/integrations_illustration.webp" alt="cube">
@@ -95,7 +92,7 @@
 
                 <!-- <div class="offer-detail"> -->
                 <div class="fullscreen-offer">
-                    <div class=".container">
+                    <div class="container">
                         <div class="floater two-cols first"><img src="img/crm-Illustration.svg" alt="book">
                             <a href="" class="btn">Learn More</a>
                         </div>
@@ -115,7 +112,7 @@
                     </div>
                 </div>
 
-                <div class=".container">
+                <div class="container">
                     <div class="floater  three-cols">
                         <div class="offer-detail"><img src="img/marketing-hub-free.svg" alt="">
                             <h3>Marketing Hub</h3>
@@ -179,13 +176,13 @@
                     HubSpot's legendary customer support team and a community of thousands of marketing and sales pros
                     just
                     like you.</p>
-                <div class=".container">
+                <div class="container">
                     <div class="floater four-cols"><img src="img/homepage_community_agency.svg" alt=""><span class="big-num">150</span><span class="caption">HubSpot user groups</span></div>
                     <div class="floater four-cols"><img src="img/homepage_community_blog.svg" alt=""><span class="big-num">45M</span><span class="caption">monthly visits</span></div>
                     <div class="floater four-cols"><img src="img/homepage_community_academy.svg" alt=""><span class="big-num">155K</span><span class="caption">certified professionals</span></div>
                     <div class="floater four-cols"><img src="img/homepage_community_inbound.svg" alt=""><span class="big-num">21K</span><span class="caption">registered attendees</span></div>
                 </div>
-                <div class=".container">
+                <div class="container">
                     <div class="floater four-cols"><img src="img/homepage_community_connect.svg" alt=""><span class="big-num">200</span><span class="caption">integrations</span></div>
                     <div class="floater four-cols"><img src="img/homepage_community_globe.svg" alt=""><span class="big-num">6</span><span class="caption">languages</span></div>
                     <div class="floater four-cols"><img src="img/homepage_community_followers.svg" alt=""><span class="big-num">2.6M</span><span class="caption">social followers</span></div>
@@ -197,7 +194,7 @@
         <div class="wrapper">
 
             <section class="partner">
-                <div class=".container">
+                <div class="container">
                     <div class="floater two-cols">
                         <span class="big-num">64,500</span>
                         <!-- poi togli h2 e fai via font-size -->
@@ -236,7 +233,7 @@
     <footer>
         <div class="wrapper">
             <section class="links">
-                <div class=".container">
+                <div class="container">
                     <div class="floater four-cols">
                         <h5>Increase Your Traffic</h5>
                         <ul>
