--- a/test/index.html
+++ b/test/index.html
@@ -123,119 +123,151 @@
 
                 </div>
             </div>
+            <div class="offer-list">
+                <div class="container">
+                    <div class="col-10 col-offset-1">
+                        <div class="container">
+                            <div class="col-4">
+                                <div class="offer-box"><img src="img/marketing-hub-free.svg" alt="">
+                                    <h3>Marketing Hub</h3>
+                                    <p>Marketing software to help you grow traffic, convert more visitors, and run complete
+                                        inbound
+                                        marketing campaigns at scale.</p>
+                                    <h4 class="fake-hr">Popular feature</h4>
+                                    <ul>
+                                        <li>Lead Generation</li>
+                                        <li>Marketing Automation</li>
+                                        <li>Analytics</li>
+                                    </ul>
+                                    <a href="" class="btn">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="offer-box"><img src="img/sales-professional-illustration.svg" alt="">
+                                    <h3>Sales Hub</h3>
+                                    <p>Time-saving sales software that helps you get deeper insights into prospects,
+                                        automate
+                                        the
+                                        tasks you hate, and close more deals faster.</p>
+                                    <h4 class="fake-hr">Popular feature</h4>
+                                    <ul>
+                                        <li>Email Tracking</li>
+                                        <li>Meeting Scheduling</li>
+                                        <li>Email Automation</li>
+                                    </ul>
+                                    <a href="" class="btn">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="offer-box"><img src="img/service-hub-illustration.svg" alt="">
+                                    <h3>Service Hub</h3>
+                                    <p>Customer service software to help you connect with customers, exceed expectations,
+                                        and
+                                        turn
+                                        them into promoters who grow your business.</p>
+                                    <h4 class="fake-hr">Popular feature</h4>
+                                    <ul>
+                                        <li>Tickets</li>
+                                        <li>Customer Feedback</li>
+                                        <li>Knowledge Base</li>
+                                    </ul>
+                                    <a href="" class="btn">Learn More</a>
 
-            <div class="container">
-                <div class="col-10 col-offset-1">
-                    <div class="container">
-                        <div class="col-4">
-                            <div class="offer-box"><img src="img/marketing-hub-free.svg" alt="">
-                                <h3>Marketing Hub</h3>
-                                <p>Marketing software to help you grow traffic, convert more visitors, and run complete
-                                    inbound
-                                    marketing campaigns at scale.</p>
-                                <h4 class="fake-hr">Popular feature</h4>
-                                <ul>
-                                    <li>Lead Generation</li>
-                                    <li>Marketing Automation</li>
-                                    <li>Analytics</li>
-                                </ul>
-                                <a href="" class="btn">Learn More</a>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-4">
-                            <div class="offer-box"><img src="img/sales-professional-illustration.svg" alt="">
-                                <h3>Sales Hub</h3>
-                                <p>Time-saving sales software that helps you get deeper insights into prospects,
-                                    automate
-                                    the
-                                    tasks you hate, and close more deals faster.</p>
-                                <h4 class="fake-hr">Popular feature</h4>
-                                <ul>
-                                    <li>Email Tracking</li>
-                                    <li>Meeting Scheduling</li>
-                                    <li>Email Automation</li>
-                                </ul>
-                                <a href="" class="btn">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <div class="offer-box"><img src="img/service-hub-illustration.svg" alt="">
-                                <h3>Service Hub</h3>
-                                <p>Customer service software to help you connect with customers, exceed expectations,
-                                    and
-                                    turn
-                                    them into promoters who grow your business.</p>
-                                <h4 class="fake-hr">Popular feature</h4>
-                                <ul>
-                                    <li>Tickets</li>
-                                    <li>Customer Feedback</li>
-                                    <li>Knowledge Base</li>
-                                </ul>
-                                <a href="" class="btn">Learn More</a>
 
-                            </div>
-                        </div>
                     </div>
-
                 </div>
             </div>
         </section>
 
         <section class="results">
-            <div class="wrapper">
-                <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
-                <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with
-                    HubSpot's legendary customer support team and a community of thousands of marketing and sales pros
-                    just
-                    like you.</p>
+            <div class="results-banner">
                 <div class="container">
-                    <div class="floater four-cols"><img src="img/homepage_community_agency.svg" alt=""><span class="big-num">150</span><span class="caption">HubSpot user groups</span></div>
-                    <div class="floater four-cols"><img src="img/homepage_community_blog.svg" alt=""><span class="big-num">45M</span><span class="caption">monthly visits</span></div>
-                    <div class="floater four-cols"><img src="img/homepage_community_academy.svg" alt=""><span class="big-num">155K</span><span class="caption">certified professionals</span></div>
-                    <div class="floater four-cols"><img src="img/homepage_community_inbound.svg" alt=""><span class="big-num">21K</span><span class="caption">registered attendees</span></div>
+                    <div class="col-10 col-offset-1">
+                        <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+                        <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with
+                            HubSpot's legendary customer support team and a community of thousands of marketing and sales pros
+                            just
+                            like you.</p>
+                    </div>
                 </div>
+            </div>
+            <div class="results-list">
                 <div class="container">
-                    <div class="floater four-cols"><img src="img/homepage_community_connect.svg" alt=""><span class="big-num">200</span><span class="caption">integrations</span></div>
-                    <div class="floater four-cols"><img src="img/homepage_community_globe.svg" alt=""><span class="big-num">6</span><span class="caption">languages</span></div>
-                    <div class="floater four-cols"><img src="img/homepage_community_followers.svg" alt=""><span class="big-num">2.6M</span><span class="caption">social followers</span></div>
-                    <div class="floater four-cols"><img src="img/growthhub-white-small-1.svg" alt=""><span class="big-num">5K</span><span class="caption">profiles and counting</span></div>
+                    <div class="col-10 col-offset-1">
+                        <div class="container">
+                            <div class="col-3"><img src="img/homepage_community_agency.svg" alt=""><span class="big-num">150</span><span class="caption">HubSpot user groups</span></div>
+                            <div class="col-3"><img src="img/homepage_community_blog.svg" alt=""><span class="big-num">45M</span><span class="caption">monthly visits</span></div>
+                            <div class="col-3"><img src="img/homepage_community_academy.svg" alt=""><span class="big-num">155K</span><span class="caption">certified professionals</span></div>
+                            <div class="col-3"><img src="img/homepage_community_inbound.svg" alt=""><span class="big-num">21K</span><span class="caption">registered attendees</span></div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="results-list">
+                <div class="container">
+                    <div class="col-10 col-offset-1">
+                        <div class="container">
+                            <div class="col-3"><img src="img/homepage_community_connect.svg" alt=""><span class="big-num">200</span><span class="caption">integrations</span></div>
+                            <div class="col-3"><img src="img/homepage_community_globe.svg" alt=""><span class="big-num">6</span><span class="caption">languages</span></div>
+                            <div class="col-3"><img src="img/homepage_community_followers.svg" alt=""><span class="big-num">2.6M</span><span class="caption">social followers</span></div>
+                            <div class="col-3"><img src="img/growthhub-white-small-1.svg" alt=""><span class="big-num">5K</span><span class="caption">profiles and counting</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="partner">
+            <div class="container">
+                <div class="col-2 col-offset-2">
+
+                    <span class="big-num">64,500</span>
+                    <p>customers in over <b>100</b> countries growing their business with HubSpot</p>
+                </div>
+                <div class="col-6 col-offset-1">
+                    <ul class="partner-list">
+                        <li> <img src="img/atlassian-horizontal-blue.webp" alt="">
+                        </li>
+                        <li> <img src="img/doordash_owler.webp" alt="">
+                        </li>
+                        <li> <img src="img/g2crowd-logo.webp" alt="">
+                        </li>
+                        <li> <img src="img/purple-logo.webp" alt="">
+                        </li>
+                        <li> <img src="img/subaru_logo.webp" alt="">
+                        </li>
+                        <li> <img src="img/wistia_logo.webp" alt="">
+                        </li>
+                        <li> <img src="img/classpass-logo.webp" alt="">
+                        </li>
+                        <li> <img src="img/vmware_logo_gry_rgb_300dpi.webp" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="final-spot">
+            <div class="container">
+                <div class="col-4 col-offset-1">
+                    <div class="text-container">
+                        <h2>Start Growing With HubSpot Today</h2>
+                        <p>With tools to make every part of your process more human and a support team excited to help
+                            you,
+                            getting started with inbound has never been easier.</p>
+                        <a href="#" class="btn">GetHubspotFree</a>
+                        <p class="caption">Get started with FREE tools, or get more with our premium software.</p>
+                    </div>
+                </div>
+                <div class="col-3 col-offset-3">
+                    <img src="img/woman.webp" alt="happy woman">
+                </div>
+
             </div>
 
         </section>
-        <div class="wrapper">
-
-            <section class="partner">
-                <div class="container">
-                    <div class="floater two-cols">
-                        <span class="big-num">64,500</span>
-                        <!-- poi togli h2 e fai via font-size -->
-                        <p>customers in over <b>100</b> countries growing their business with HubSpot</p>
-                    </div>
-                    <div class="floater two-cols">
-                        <img src="img/atlassian-horizontal-blue.webp" alt="">
-                        <img src="img/doordash_owler.webp" alt="">
-                        <img src="img/g2crowd-logo.webp" alt="">
-                        <img src="img/purple-logo.webp" alt="">
-                        <img src="img/subaru_logo.webp" alt="">
-                        <img src="img/wistia_logo.webp" alt="">
-                        <img src="img/classpass-logo.webp" alt="">
-                        <img src="img/vmware_logo_gry_rgb_300dpi.webp" alt="">
-                    </div>
-                </div>
-            </section>
-            <section class="final-spot">
-                <div class="text-container">
-                    <h2>Start Growing With HubSpot Today</h2>
-                    <p>With tools to make every part of your process more human and a support team excited to help
-                        you,
-                        getting started with inbound has never been easier.</p>
-                    <a href="#" class="btn">GetHubspotFree</a>
-                    <p class="caption">Get started with FREE tools, or get more with our premium software.</p>
-                </div>
-
-            </section>
-        </div>
     </main>
 
 
@@ -243,7 +275,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="wrapper">
+        <div class=" wrapper">
             <section class="links">
                 <div class="container">
                     <div class="floater four-cols">
