--- a/test/index.html
+++ b/test/index.html
@@ -93,8 +93,6 @@
             </div>
 
             <!-- /Slogan -->
-
-            <!-- <div class="offer-detail"> -->
             <div class="fullscreen-offer">
                 <div class="container">
                     <div class="col-10 col-offset-1">
@@ -125,56 +123,52 @@
             </div>
             <div class="offer-list">
                 <div class="container">
-                    <div class="col-10 col-offset-1">
-                        <div class="container">
-                            <div class="col-4">
-                                <div class="offer-box"><img src="img/marketing-hub-free.svg" alt="">
-                                    <h3>Marketing Hub</h3>
-                                    <p>Marketing software to help you grow traffic, convert more visitors, and run complete
-                                        inbound
-                                        marketing campaigns at scale.</p>
-                                    <h4 class="fake-hr">Popular feature</h4>
-                                    <ul>
-                                        <li>Lead Generation</li>
-                                        <li>Marketing Automation</li>
-                                        <li>Analytics</li>
-                                    </ul>
-                                    <a href="" class="btn">Learn More</a>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <div class="offer-box"><img src="img/sales-professional-illustration.svg" alt="">
-                                    <h3>Sales Hub</h3>
-                                    <p>Time-saving sales software that helps you get deeper insights into prospects,
-                                        automate
-                                        the
-                                        tasks you hate, and close more deals faster.</p>
-                                    <h4 class="fake-hr">Popular feature</h4>
-                                    <ul>
-                                        <li>Email Tracking</li>
-                                        <li>Meeting Scheduling</li>
-                                        <li>Email Automation</li>
-                                    </ul>
-                                    <a href="" class="btn">Learn More</a>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <div class="offer-box"><img src="img/service-hub-illustration.svg" alt="">
-                                    <h3>Service Hub</h3>
-                                    <p>Customer service software to help you connect with customers, exceed expectations,
-                                        and
-                                        turn
-                                        them into promoters who grow your business.</p>
-                                    <h4 class="fake-hr">Popular feature</h4>
-                                    <ul>
-                                        <li>Tickets</li>
-                                        <li>Customer Feedback</li>
-                                        <li>Knowledge Base</li>
-                                    </ul>
-                                    <a href="" class="btn">Learn More</a>
+                    <div class="col-3 col-offset-1">
+                        <div class="offer-box"><img src="img/marketing-hub-free.svg" alt="">
+                            <h3>Marketing Hub</h3>
+                            <p>Marketing software to help you grow traffic, convert more visitors, and run complete
+                                inbound
+                                marketing campaigns at scale.</p>
+                            <h4 class="fake-hr">Popular feature</h4>
+                            <ul>
+                                <li>Lead Generation</li>
+                                <li>Marketing Automation</li>
+                                <li>Analytics</li>
+                            </ul>
+                            <a href="" class="btn">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-box central"><img src="img/sales-professional-illustration.svg" alt="">
+                            <h3>Sales Hub</h3>
+                            <p>Time-saving sales software that helps you get deeper insights into prospects,
+                                automate
+                                the
+                                tasks you hate, and close more deals faster.</p>
+                            <h4 class="fake-hr">Popular feature</h4>
+                            <ul>
+                                <li>Email Tracking</li>
+                                <li>Meeting Scheduling</li>
+                                <li>Email Automation</li>
+                            </ul>
+                            <a href="" class="btn">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="offer-box"><img src="img/service-hub-illustration.svg" alt="">
+                            <h3>Service Hub</h3>
+                            <p>Customer service software to help you connect with customers, exceed expectations,
+                                and
+                                turn
+                                them into promoters who grow your business.</p>
+                            <h4 class="fake-hr">Popular feature</h4>
+                            <ul>
+                                <li>Tickets</li>
+                                <li>Customer Feedback</li>
+                                <li>Knowledge Base</li>
+                            </ul>
+                            <a href="" class="btn">Learn More</a>
 
-                                </div>
-                            </div>
                         </div>
 
                     </div>
